fixed version errors